@@ -517,7 +517,8 @@ dnl system function checks (defined _GNU_SOURCE)
 dnl
 AC_DEFINE([_GNU_SOURCE], [], [enable GNU libc extension])
 AC_CHECK_LIB(posix4, nanosleep)
-AC_CHECK_FUNCS([getline getsubopt nanosleep strndup strsep strlcat strlcpy])
+AC_CHECK_FUNCS([nanosleep])
+AC_REPLACE_FUNCS([getline getsubopt strlcat strlcpy strndup strsep])
 AC_CHECK_HEADERS(string.h strings.h linux/kd.hb execinfo.h)
 
 
